# meon

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_RU.md  CHANGELOG.md  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PULL_REQUEST_TEMPLATE.md  README.md  README_RU.md  flake.nix
.github/workflows/: ci.yml
benches/: Cargo.toml  JSON_COMPARE.md  JSON_COMPARE_RU.md  MD_COMPARE.md  MD_COMPARE_RU.md  README.md  README_RU.md
benches/benches/: docs_json.rs  docs_md.rs  meon-json_compare.rs  meon-json_parse.rs  meon-json_standalone.rs  meon-md_compare.rs  meon-md_parse.rs  meon-md_standalone.rs
fuzz/: Cargo.toml  README.md  README_RU.md
fuzz/fuzz_targets/: parse_text.rs
meon/: Cargo.toml  README.md  README_RU.md
meon-json/: Cargo.toml  README.md  README_RU.md
meon-json/src/: lib.rs  typing.rs
meon-json/tests/: context.rs  integration.rs  typing.rs
meon-macros/: Cargo.toml  README.md  README_RU.md
meon-macros/src/: codegen.rs  collect.rs  cursor.rs  error.rs  lib.rs  methods.rs  model.rs  strip.rs
meon-md/: Cargo.toml  README.md  README_RU.md
meon-md/src/: lib.rs
meon-md/src/types/: block.rs  inline.rs  line.rs  mod.rs
meon-md/tests/: context.rs  integration.rs
meon/src/: lib.rs  span.rs  swar.rs
meon/src/engine/: content.rs  mod.rs
meon/src/engine/text_parser/: block.rs  inline.rs  line.rs  mod.rs
meon/src/engine/text_parser/standalone/: asymmetric.rs  block_marker.rs  block_numbered.rs  chained.rs  common.rs  cont.rs  context.rs  context_iter.rs  fence.rs  key_value.rs  line_marker.rs  line_uniform.rs  mod.rs  symmetric.rs
meon/tests/: trybuild.rs
meon/tests/text_parser/: common.rs
meon/tests/text_parser/mechanisms/: block.rs  inline.rs  line.rs  mod.rs
meon/tests/text_parser/standalone/: context.rs
meon/tests/ui/fail/: fence_missing_min.rs  fence_missing_min.stderr  line_missing_max.rs  line_missing_max.stderr  missing_cap.rs  missing_cap.stderr  no_body.rs  no_body.stderr  symmetric_missing_byte.rs  symmetric_missing_byte.stderr  wrong_context_keyword.rs  wrong_context_keyword.stderr
meon/tests/ui/pass/: external_grammar.rs
