[workspace]
members = [
    "meon",
    "meon-macros",
    "meon-md",
    "benches",
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-meon-commercial"
rust-version = "1.86"
authors = [ "vgnapuga <shavrin_ns@mail.ru>" ]
repository = "https://github.com/vgnapuga/meon"

[workspace.dependencies]
meon = { path = "./meon", version = "0.2.0" }
meon-macros = { path = "./meon-macros", version = "0.2.0" }
meon-md = { path = "./meon-md", version = "0.2.0" }
