[workspace]
members = [
    "meon",
    "meon-macros",
    "meon-md",
    "meon-json",
    "benches",
    "fuzz",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.86"
authors = [ "vgnapuga <shavrin_ns@mail.ru>" ]
repository = "https://github.com/vgnapuga/meon"

[workspace.dependencies]
meon = { path = "./meon", version = "0.3.0" }
meon-macros = { path = "./meon-macros", version = "0.2.0" }
meon-md = { path = "./meon-md", version = "0.2.0" }
meon-json = { path = "./meon-json", version = "0.1.1" }
