[package]
name = "meon-json"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

description = "A fast flat parser for a JSON, built on the meon engine"
keywords = [ "json", "parser", "fast", "meon" ]
categories = [ "text-processing", "parsing" ]
readme = "README.md"

[dependencies]
meon.workspace = true

[[test]]
name = "json_parser-integration"
path = "tests/integration.rs"

[[test]]
name = "json_parser-typing"
path = "tests/typing.rs"
